linuxmuster-linbo-gui7 (7.0.4) lmn71; urgency=medium

  * Fix crash when trying to create a new image wihout a baseimage 

 -- Dorian Zedler <dorian@itsblue.de>  Fri, 26 Nov 2021 17:36:22 +0100

linuxmuster-linbo-gui7 (7.0.3-1) lmn71; urgency=low

  * move to lmn71 repo

 -- Dorian Zedler <dorian@itsblue.de>  Thu, 26 Nov 2021 09:15:00 +0100

linuxmuster-linbo-gui7 (7.0.3) lmn7; urgency=low

  * Fix Kernel append options

 -- Dorian Zedler <dorian@itsblue.de>  Thu, 21 Jul 2021 09:15:00 +0100

linuxmuster-linbo-gui7 (7.0.2) lmn7; urgency=low

  * Fix sizes on very very very very small displays (<200px)

 -- Dorian Zedler <dorian@itsblue.de>  Thu, 20 May 2021 13:00:00 +0100

linuxmuster-linbo-gui7 (7.0.1-release) lmn7; urgency=low

  * Implemented "AutoPartition" and "AutoInitcache" functionality (#56)
  * Improoved keyboard only usage (#59)
  * Error logs are now fully displayed in a scrollable container (#55)
  * Console processes are killed when the console window is closed (#57)
  * Add start.conf option "ClientDetailsVisibleByDefault" to make the details visible by default (#54)
  * Don't hide the client details when some task (eg. upload image) starts (#54)
  * Fix registering clients (#53)
  * Fix segfault issue from rc01
  * Hide "partition" and "init cache" buttons when not registered
  * Add theming engine

 -- Dorian Zedler <dorian@itsblue.de>  Thu, 20 May 2021 13:00:00 +0100

linuxmuster-linbo-gui7 (7.0.1-rc03) lmn7-testing; urgency=low

  * Add theming engine

 -- Dorian Zedler <dorian@itsblue.de>  Fri, 23 Mar 2021 16:30:00 +0100

linuxmuster-linbo-gui7 (7.0.1-rc02) lmn7-testing; urgency=low

  * Fix segfault issue from rc01
  * Hide "partition" and "init cache" buttons when not registered

 -- Dorian Zedler <dorian@itsblue.de>  Fri, 23 Mar 2021 16:30:00 +0100 

linuxmuster-linbo-gui7 (7.0.1-rc01) lmn7-testing; urgency=low

  * Implemented "AutoPartition" and "AutoInitcache" functionality (#56)
  * Improoved keyboard only usage (#59)