@@ -5,9 +5,9 @@ Server = 10.0.0.1       # IP des Servers
 SystemType = bios
 Group = Linbo-Test
 RootTimeout = 20        # automatischer Rootlogout nach 600 Sek.
-Autopartition = no       # keine automatische Partitionsreparatur beim LINBO-Start
-AutoFormat = no          # kein automatisches Formatieren aller Partitionen beim LINBO-Start
-AutoInitCache = no       # kein automatisches Befüllen des Caches beim LINBO-Start
+Autopartition = yes       # keine automatische Partitionsreparatur beim LINBO-Start
+AutoFormat = yes          # kein automatisches Formatieren aller Partitionen beim LINBO-Start
+AutoInitCache = yes       # kein automatisches Befüllen des Caches beim LINBO-Start
 DownloadType = torrent   # Image-Download per torrent|rsync|multicast
 #UseMinimalLayout = yes    # Use nice minimalistic layout
 Locale = de-de
@@ -16,8 +16,6 @@ Locale = de-de
 #BackgroundColor = 394f5e
 #BackgroundColor = ffffff
 clientDetailsVisibleByDefault = no
-autopartition = no
-autoinitcache = no
 #themeconffile=redAndWhiteTheme.conf
 
 [Partition]              # Start einer Partitionsdefinition, openSUSE
