@@ -1,3 +1,10 @@
+linuxmuster-linbo-gui7 (7.1.0) lmn71; urgency=medium
+
+  * When cancelling an action with the logout flag, the user is now logged out
+
+ -- Dorian Zedler <dorian@itsblue.de>  Fri, 26 Nov 2021 17:36:22 +0100
+
+
 linuxmuster-linbo-gui7 (7.0.4) lmn71; urgency=medium
 
   * Fix crash when trying to create a new image wihout a baseimage 
